--- a/views/pratos.ejs
+++ b/views/pratos.ejs
@@ -1,10 +1,11 @@
+<!-- views/pratos.ejs -->
+<!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
-    
+  <body class="container">  
     <header>
         <% include ../partials/header %>
     </header>
