--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,10 @@
+<!-- views/index.ejs -->
+<!DOCTYPE html>
 <html>
   <head>
       <% include ../partials/head %>
   </head>
-  <body>
+  <body class="container">
       <header>
           <% include ../partials/header %>
       </header>
