--- a/views/newPrato.ejs
+++ b/views/newPrato.ejs
@@ -1,10 +1,11 @@
+<!-- views/newPrato.ejs -->
 <!DOCTYPE html>
 <html>
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
+  <body class="container">
     <header>
         <% include ../partials/header %>
     </header>
