--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -1,6 +1,8 @@
 <!-- views/partials/header.ejs -->
 <link rel='stylesheet' href='/stylesheets/header.css' />
-<div class="container">
+<meta name="viewport" content="width=device-width, user-scalable=no">
+<meta charset="UTF-8">
+<div class="container" id="menu">
     <div class="row">
         <nav class="navbar navbar-default no-margin navbar-fixed-top" role="navigation">
             <div class="container-fluid">
