--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,9 @@
 <!-- views/index.ejs -->
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
-      <% include ../partials/head %>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body class="container">
       <header>
