--- a/partials/footer.ejs
+++ b/partials/footer.ejs
@@ -1,2 +1,4 @@
 <!-- views/partials/footer.ejs -->
 <link rel='stylesheet' href='/stylesheets/footer.css' />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, user-scalable=no">
