--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,6 +24,10 @@ table, th, td{
   padding: 10px;
 }
 
+tr:nth-of-type(2n+1){
+  background: #eee,
+}
+
 .btn-pesquisa{
   color: white;
   background-color: blue;
